Closed
Bug 1429021
Opened 8 years ago
Closed 8 years ago
DBus crashes with missing profile name
Categories
(Core Graveyard :: X-remote, defect, P1)
Tracking
(firefox-esr52 unaffected, firefox57 unaffected, firefox58 unaffected, firefox59 fixed)
RESOLVED
FIXED
mozilla59
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox57 | --- | unaffected |
firefox58 | --- | unaffected |
firefox59 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
Details
(Keywords: crash, regression)
Attachments
(1 file)
Follow up from https://bugzilla.mozilla.org/show_bug.cgi?id=1420124#c21
(In reply to Tim Taubert [:ttaubert] from comment #21)
> (In reply to Martin Stránský [:stransky] from comment #20)
> > Great, Thanks. Can you also provide actual profile name you used as an
> > argument, params of
> > nsDBusRemoteService::Startup() (this is the profile name) and also the name
> > from _dbus_check_is_valid_bus_name() if that's possible. You may need to
> > install firefox debuginfo package for that.
>
> I launched Firefox/GDB with:
>
> > gdb --args ~/bin/firefox-nightly/firefox -profile ~/.mozilla/firefox/cp2auh9b.default
>
> aProfileName seems empty...
>
> > #6 0x00007fffe69eb199 in nsDBusRemoteService::Startup(char const*, char const*) (this=0x7fffc7cbf940, aAppName=0x7ffff6b89120 "firefox", aProfileName=0x7fffffffd1ac "") at /home/tim/workspace/gecko-dev/toolkit/components/remote/nsDBusRemoteService.cpp:185
> > #7 0x00007fffe69ec607 in nsRemoteService::Startup(char const*, char const*) (this=0x7fffc7cbf0d0, aAppName=0x7ffff6b89120 "firefox", aProfileName=0x7fffffffd1ac "")
> > at /home/tim/workspace/gecko-dev/toolkit/components/remote/nsRemoteService.cpp:40
>
> So we end up with `busName` = "org.mozilla.firefox." and the validate
> function rejects trailing dots:
>
> https://github.com/kobolabs/dbus/blob/
> 566df92e5319a50e0a6223afccee8f1b9a03b8d5/dbus/dbus-marshal-validate.c#L1071
Comment hidden (mozreview-request) |
Comment 2•8 years ago
|
||
mozreview-review |
Comment on attachment 8941029 [details]
Bug 1429021 - Don't try to start DBus service without any application/profile name,
https://reviewboard.mozilla.org/r/211326/#review217744
Attachment #8941029 -
Flags: review?(jhorak) → review+
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/ed6f1ea151c1
Don't try to start DBus service without any application/profile name, r=jhorak
Comment 4•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Updated•8 years ago
|
status-firefox57:
--- → unaffected
status-firefox58:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•