Bug 1429021 - Don't try to start DBus service without any application/profile name, r=jhorak

MozReview-Commit-ID: 97jawSNNp3i